--- a/client/views/events.html
+++ b/client/views/events.html
@@ -12,7 +12,7 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="row text-center">
                     <h1 ng-if="user" >Upcoming Events to <br> Volunteer For:</h1>
-                    <h1 ng-if="!user"> Sign In or <span ></span> To View Events</h1>
+                    <h1 ng-if="!user"> Sign In or <span> <a href="/register" class="signUpText" >Sign Up</a> </span> To View Events</h1>
                 </div>
                 <br>
                 <caption>All Events</caption>
