--- a/client/views/home.html
+++ b/client/views/home.html
@@ -20,7 +20,7 @@
 
 <!--- Services -->
 
-<div id="services" class="services">
+<div id="aboutUs" class="services" >
     <div class="container">
         <!--Intro Services-->
         <h2 class="wow fadeInUp">How does all this work?</h2>
