--- a/client/views/register.html
+++ b/client/views/register.html
@@ -36,7 +36,7 @@
 
 <!--org reg modal-->
 
-<div class="modal fade" id="organizationRegisterModal" tabindex="-1" role="dialog" aria-labelledby="organizationRegisterModalLabel"
+<div class="modal" id="organizationRegisterModal" tabindex="-1" role="dialog" aria-labelledby="organizationRegisterModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-lg" role="form">
         <div class="modal-content">
@@ -81,7 +81,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="orgName">Password</label>
-                                                <input type="text" class="form-control" placeholder="Enter Password" ng-model="orgPassword">
+                                                <input type="password" class="form-control" placeholder="Enter Password" ng-model="orgPassword">
                                             </div>
                                         </div>
                                     </div>
@@ -128,7 +128,7 @@
 
 
 <!--Vol Reg Modal-->
-<div class="modal fade" id="volunteerRegisterModal" tabindex="-1" role="dialog" aria-labelledby="volRegisterModalLabel" aria-hidden="true">
+<div class="modal" id="volunteerRegisterModal" tabindex="-1" role="dialog" aria-labelledby="volRegisterModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <!--Header-->
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="volPassword">Password</label>
-                                    <input type="text" class="form-control" placeholder="Enter a new password" ng-model="volPassword">
+                                    <input type="password" class="form-control" placeholder="Enter a new password" ng-model="volPassword">
                                 </div>
                             </form>
                         </div>
