--- a/client/views/editVolunteerProfile.html
+++ b/client/views/editVolunteerProfile.html
@@ -85,7 +85,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="volAbout">Tell us a little about yourself:</label>
-                                        <textarea name="volAbout" cols="30" rows="10" ng-model="newVol.about"></textarea>
+                                        <textarea name="volAbout" class="form-control" cols="30" rows="10" ng-model="newVol.about"></textarea>
                                     </div>
                                 </div>
                             </div>
