Fixes buttons on register page

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -395,3 +395,11 @@ caption  {
     width: 50%;
 }
 
+/* Register Text  */
+.rg-master {
+    text-shadow:
+   -1px -1px 0 #000,
+   1px -1px 0 #000,
+   -1px 1px 0 #000,
+   1px 1px 0 #000;
+}
