--- a/client/views/home.html
+++ b/client/views/home.html
@@ -3,13 +3,13 @@
 <div id="header" class="header">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 wow fadeInLeft">
+            <div class="col-md-6 wow fadeInLeft rg-master">
                 <h1>{{ slogan }}</h1>
                 <h3>{{ description }}</h3>
                 <button class="btn btn-lg btn-success"><a class="menu-item" href="/register">Sign Up</a></button>
-            </div>
+            </div
             <div class="col-md-6 wow fadeInRight">
-                <img src="./images/homeSlideIn.jpg" alt="This should be a cool picture" class="img-rounded">
+                <img src="./images/homeSlideIn.jpg" alt="This should be a cool picture" class="img-rounded rg-master">
             </div>
         </div>
     </div>
