--- a/client/views/register.html
+++ b/client/views/register.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center rg-master">
                 <h1>Sign Up To Link Up</h1>
-                <h5>Which type of account best describe you: </h5>
+                <h3>Which type of account best describe you: </h3>
                 <br/>
                 <!-- beginning of buttons container -->
                 <div class="container rg-master-1">
@@ -13,14 +13,14 @@
                         <div class="col-md-4 text-center">
                             <div class="radio">
                                 <label for="org">
-                                    <button type="button" class="btn btn-large btn-primary" data-toggle="modal" value="org" ng-click="orgClick()" ng-model="userType" data-target="#organizationRegisterModal">Organization</button>
+                                    <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" value="org" ng-click="orgClick()" ng-model="userType" data-target="#organizationRegisterModal">Organization</button>
                             </label>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="radio">
                                 <label for="vol">
-                                <button type="button" class="btn btn-large btn-primary" data-toggle="modal" value="vol" ng-click="volClick()" ng-model="userType" data-target="#volunteerRegisterModal">Volunteer</button>
+                                <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" value="vol" ng-click="volClick()" ng-model="userType" data-target="#volunteerRegisterModal">Volunteer</button>
                             </label>
                             </div>
                         </div>
